--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js"></script>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <script src="/assets/js/script.js"></script>
 </head>
 <body>
     <select id="menu">
-        <option value=""></option>
+        <option disabled value="">Select a question</option>
         {% for question in site.questions %}
             {% if question.url == page.url %}
                 <option disabled selected value="{{ question.url }}">{{ question.title }}</option>
